Handled data leakage

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@ parasite_egg_detection/data/__pycache__/
 parasite_egg_detection/data/general_dataset/images/
 parasite_egg_detection/data/general_test/images/
 parasite_egg_detection/data/strongylid_dataset/images/
+parasite_egg_detection/data/strongylid_dataset/test_images/
 parasite_egg_detection/data/strongylid_dataset/general_images/
+parasite_egg_detection/data/strongylid_dataset/general_test_images/
 parasite_egg_detection/data/strongylid_dataset/xml_annotations/
 
 # Ignore SAM Model parameters -> downloadable online
